# mlops-fall-2025

./: .gitignore  Dockerfile.torchserve  README.md  dvc.yaml  pyproject.toml  task.md
.dvc/: config
.github/workflows/: ci.yaml
configs/: train.yaml
data/: .gitignore
notebooks/: 1-eda.ipynb  2-prepare-dataset.ipynb  vis.html
src/: datasets.py  evaluate.py  handler.py  prepare.py  train.py
src/models/: classic_cv_model.py
tests/: conftest.py  test_data.py  test_model.py  test_train.py
